<resources>
    <string name="app_name">TrickyTasky</string>
    <string name="hintCorreo">correo</string>
    <string name="hintPass">password</string>
    <string name="login">LOGIN</string>
    <string name="add">add</string>
    <string name="logout">logout</string>
    <string name="done">Done</string>
    <string name="crea_tu_cuenta">Create yout account</string>
    <string name="edit">EDIT</string>

</resources>