<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2C2F38"
    tools:context=".Login">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titulo"
        app:srcCompat="@drawable/zombie" />

    <TextView
        android:id="@+id/titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="36dp"
        android:fontFamily="@font/zombie"
        android:text="@string/app_name"
        android:textColor="#FA7B76"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="234dp"
        android:layout_height="56dp"
        android:layout_marginTop="35dp"
        android:backgroundTint="#547580"
        android:text="@string/login"
        android:textColor="#F97B76"
        android:fontFamily="@font/zombie"
        android:textSize="18sp"
        app:cornerRadius="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutCorreo"
        android:layout_width="291dp"
        android:layout_height="54dp"
        android:layout_marginTop="35dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/cajaCorreo"
            android:layout_width="314dp"
            android:layout_height="match_parent"
            android:backgroundTint="@color/white"
            android:hint="@string/hintCorreo"
            android:textColorHint="@color/zombie_pink"
            android:textSize="16sp"

            />

        <requestFocus />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="291dp"
        android:layout_height="54dp"
        android:layout_marginTop="35dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutCorreo">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/cajaPass"
            android:layout_width="311dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:hint="@string/hintPass"
            android:inputType="textPassword"
            android:textColorHint="@color/zombie_pink"
            android:textSize="16sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/botonResgistro"
        android:layout_width="265dp"
        android:layout_height="58dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/zombie"
        android:text="@string/crea_tu_cuenta"
        android:textAlignment="center"
        android:textColor="#F97B76"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

</androidx.constraintlayout.widget.ConstraintLayout>